@@ -1,3 +1,8 @@
+2001-11-11  Braden McDaniel  <braden@endoframe.com>
+
+        * Move doc-comments to implementation files for VrmlBVolume,
+          VrmlAABox, and VrmlBSphere.
+
 2001-11-05  Thomas Flynn <tflynn@users.sourceforge.net>
 
 	* Implement 6 more methods in ScriptJDK.cpp
